// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact component renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 16,
      "paddingBottom": 12,
    }
  }
  testID="user_profile.contact"
>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-SemiBold",
          "fontSize": 17,
        },
        Object {},
        Object {
          "marginBottom": 16,
        },
      ]
    }
    testID="info_section.title"
  >
    Contact
  </Text>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
        },
        undefined,
      ]
    }
    testID="info_item"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#353E6E",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.title"
    >
      Email
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.value"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
        },
        undefined,
      ]
    }
    testID="info_item"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#353E6E",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.title"
    >
      Phone number
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.value"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
        },
        undefined,
      ]
    }
    testID="info_item"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#353E6E",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.title"
    >
      Location
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.value"
    />
  </View>
</View>
`;

exports[`Contact component renders location Not set 1`] = `
<View
  style={
    Object {
      "marginTop": 16,
      "paddingBottom": 12,
    }
  }
  testID="user_profile.contact"
>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-SemiBold",
          "fontSize": 17,
        },
        Object {},
        Object {
          "marginBottom": 16,
        },
      ]
    }
    testID="info_section.title"
  >
    Contact
  </Text>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
        },
        undefined,
      ]
    }
    testID="info_item"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#353E6E",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.title"
    >
      Email
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.value"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
        },
        undefined,
      ]
    }
    testID="info_item"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#353E6E",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.title"
    >
      Phone number
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.value"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
        },
        undefined,
      ]
    }
    testID="info_item"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#353E6E",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.title"
    >
      Location
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_item.value"
    >
      Not set
    </Text>
  </View>
</View>
`;
